data migration assistant  (Package for Source Org)/objects/Data_Migration__b.object
<CustomObject>
    <fields>
        <fullName>DateTimeIndex__c</fullName>
        <label>DateTimeIndex</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTimeStampIndex__c</fullName>
        <label>DateTimeStampIndex</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Data__c</fullName>
        <label>Object Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_Num__c</fullName>
        <label>Rec Num</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <label>Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceID_DestinationID_Map__c</fullName>
        <label>SourceID DestinationID Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fieldLabelTarget__c</fullName>
        <label>fieldLabelTarget</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldLabel__c</fullName>
        <label>fieldLabel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldNameTarget__c</fullName>
        <label>fieldNameTarget</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldName__c</fullName>
        <label>fieldName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldTypeTarget__c</fullName>
        <label>fieldTypeTarget</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldType__c</fullName>
        <label>fieldType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hierarchy__c</fullName>
        <label>hierarchy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>indexValue__c</fullName>
        <label>indexValue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>objectName__c</fullName>
        <label>objectName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklistValuesCurrent__c</fullName>
        <label>picklistValuesCurrent</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>picklistValuesTarget__c</fullName>
        <label>picklistValuesTarget</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>requiredInLayout__c</fullName>
        <label>requiredInLayout</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requiredInValidation__c</fullName>
        <label>requiredInValidation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>required__c</fullName>
        <label>required</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>targetOrgId__c</fullName>
        <label>targetOrgId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>targetOrg__c</fullName>
        <label>targetOrg</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_name__c</fullName>
        <label>user name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>indexValue</fullName>
        <fields>
            <name>indexValue__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>DateTimeStampIndex__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>targetOrg__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Object__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>indexValue</label>
    </indexes>
    <label>Data Migration</label>
    <pluralLabel>Data Migrations</pluralLabel>
</CustomObject>